--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-resource.min.js"></script>
     <script src="Masonry/Masonry.js" type="text/javascript"></script>
+    <script src="Discogs/Discogs.js" type="text/javascript"></script>
+    <script src="Common/CommonModule.js" type="text/javascript"></script>
 
   </head>
 
