--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="Masonry/Masonry.js" type="text/javascript"></script>
     <script src="Discogs/Discogs.js" type="text/javascript"></script>
     <script src="Common/CommonModule.js" type="text/javascript"></script>
+    <script src="ServerLogs/ServerLogs.js" type="text/javascript"></script>
 
   </head>
 
